# src/models/models.go
@@ -1,12 +1,18 @@
 package models
 
-// UploadResponse defines the structure for a successful upload response.
+// ErrorResponse defines the structure for a generic error response.
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+// UploadResponse defines the structure for a successful video upload response.
 type UploadResponse struct {
 	Message     string `json:"message"`
 	DownloadURL string `json:"downloadURL"`
 }
 
-// ErrorResponse defines the structure for a generic error response.
-type ErrorResponse struct {
-	Error string `json:"error"`
+// PDFResponse defines the structure for a successful PDF creation response.
+type PDFResponse struct {
+	Message     string `json:"message"`
+	DownloadURL string `json:"downloadURL"`
 }
